Fix navbar issue - when show modal nav bar notification and user icon still clicakable - Decrease z-index

--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -169,7 +169,7 @@ html[lang=ar]{
   }
 }
 .dropdown{
-  z-index: 9999;
+  z-index: 1030;
 }
 }
 
